# django-monkey-patches

./: .gitignore  README.md  README_printable.md  build_and_checks.sh  build_readme.sh  pyproject.toml  wget_sha512.sh
src/django-monkey-patches/: django__query_set__get.py  django__query_set__get_or_create.py
src/django_monkey_patches/: dev_side_code__django__orm__prefetch_1.py  django__base_cache__make_cache_key.py  django__orm__prefetch.py  django__orm__prefetch_without_useless_order_by.py  django__query_set.py  django__query_set__get.py  django__query_set__get_or_create.py  django__query_wrapper.py  django__test_case__tear_down.py  django_rest_framework__field__get_request.py  django_rest_framework__list_serializer__to_representation.py
src/django_monkey_patches.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
